# python_control_to_cpp

./: .gitignore  .gitmodules  README.md
.github/workflows/: push_docker_image.yml  run_SIL_test.yml  run_SIL_test_and_docker_push.yml  run_samples.yml  run_test_SIL.yml  (+3 more)
python_control/: control_deploy.py  kalman_filter.py  kalman_filter_deploy.py  least_squares.py  least_squares_deploy.py  lqr_deploy.py  pid_controller.py  pid_controller_deploy.py  python_control.hpp  python_control_kalman_filter.hpp  python_control_least_squares.hpp  python_control_lqr.hpp  python_control_pid_controller.hpp  python_control_state_space.hpp  python_control_transfer_function.hpp  simulation_plotter.py  state_space_deploy.py  transfer_function_deploy.py
sample/: discrete_pid_controller.cpp  discrete_state_space_1.cpp  discrete_state_space_1.py  discrete_state_space_2.cpp  discrete_state_space_2.py  discrete_state_space_lqi.py  discrete_state_space_lqi_easy.cpp  discrete_state_space_lqi_easy.py  discrete_state_space_lqr.cpp  discrete_state_space_lqr.py  discrete_transfer_function_2_4.cpp  discrete_transfer_function_2_4.py  discrete_transfer_function_3_4.cpp  discrete_transfer_function_4_4.cpp  discrete_transfer_function_4_4.py
test_sil/: MCAP_tester.py  SIL_operator.py
test_sil/discrete_state_space/: CMakeLists.txt  build_SIL.sh  discrete_state_space_1_SIL.py  discrete_state_space_2_SIL.py  discrete_state_space_SIL.cpp  discrete_state_space_sil.cpp
test_sil/discrete_transfer_function/: CMakeLists.txt  discrete_transfer_function_2_4_PIL.py  discrete_transfer_function_2_4_SIL.py  discrete_transfer_function_3_4_SIL.py  discrete_transfer_function_4_4_SIL.py  discrete_transfer_function_SIL.cpp
test_vs/: test_vs.vcxproj  test_vs.vcxproj.filters  test_vs_EKF_data.hpp  test_vs_LS_data.hpp  test_vs_data.hpp  test_vs_main.cpp
(+53 files in other folders)
